applications/linkding/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: linkding
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
