applications/linkding/manifests/ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkding-tailscale
  namespace: linkding
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - linkding
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linkding
                port:
                  number: 9090
