applications/linkding/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkding
  namespace: linkding
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - linkding.mrcontainer.nl
      secretName: linkding-tls
  rules:
    - host: linkding.mrcontainer.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linkding
                port:
                  number: 9090
